Fix overlap issue

--- a/css/newpledge.css
+++ b/css/newpledge.css
@@ -27,7 +27,7 @@ body{
 }
 .jumbotron{
 	background: #204659 url(/images/05-midwest.jpg) no-repeat;
-	height:1000px;
+	min-height:1000px;
 	background-position:right top; 
 	margin-top: 70px;
 }
